# pax-interitus

./: .gitignore  2drender.csproj  2drender.sln  CMakeLists.txt  Celestial.cs  Control.tscn  FixedV2D.cs  Fleet.cs  Makefile  OrbitObject.cs  README  Renderer.cs  StartStop.cs  Transform.cs  Universe.cs  beamtype.h  bindings.h  bindings.xml  build.sh  capacitordesigner.py  celestialtype.cpp  celestialtype.h  celestialwindow.cpp  celestialwindow.h  celestialwindow.py  celestialwindow.ui  component.cpp  component.h  effects.h  empire.h  export_presets.cfg  fixedv2d.h  fleettype.cpp  fleettype.h  freespace-aurora.py  g.c  jumpdrivewindow.py  main.c  main.cpp  mainwindow.cpp  (+41 more)
components/: .gitignore  CMakeLists.txt  capacitor.h  circuit.h  component.cpp  component.h  jumpdrive.h
designer_windows/: CMakeLists.txt  capacitordesigner.cpp  capacitordesigner.h  capacitordesigner.ui  circuitdesigner.h  circuitdesigner.ui  circuitwindow.h  designpropertieswidget.cpp  designpropertieswidget.h  designpropertieswidget.ui  jumpdrivewindow.h  spacecraftdesigner.h  spacecraftdesigner.ui
icons/: LICENSE.txt  attribution.txt
icons/old/: README.txt
libshiboken/: .gitignore  CMakeLists.txt
python/: CMakeLists.txt  capacitordesigner.py  capacitordesigner.ui  celestialwindow.py  celestialwindow.ui  circuitwindow.py  circuitwindow.ui  jumpdrivewindow.py  mainwindow.ui  paxpython.cpp  pycelestialwrapper.cpp  pyinsulatorwrapper.cpp  pyinsulatorwrapper.h  pyspacecraftwrapper.cpp  pysystemrenderer.cpp  pysystemrenderer.h  pysystemrenderermousebackend.cpp  pyuniversewrapper.cpp  pywrappers.h  qlistwrapper.cpp  spacecraftdesigner.py  spacecraftdesigner.ui  techwindow.py  template.py  units.py  wrappergen.py
python/autowrappers/: capacitor.json  capacitordesignwrapper.cpp  capacitordesignwrapper.h  capacitorwrapper.cpp  celestialwrapper.cpp  fixedv2dwrapper.cpp  fixedv2dwrapper.h  insulatorwrapper.cpp  orbittypewrapper.cpp  pycapacitordesignwrapper.cpp  pycapacitorwrapper.cpp  pycapacitorwrapper.h  pycelestialwrapper.cpp  pycelestialwrapper.h  pyfixedv2dwrapper.cpp  pyinsulatorwrapper.cpp  pyorbittypewrapper.cpp  pyorbittypewrapper.h  spacecraft.json  spacecraftdesign.json  spacecraftdesignwrapper.cpp  spacecraftdesignwrapper.h  spacecraftwrapper.cpp  spacecraftwrapper.h  transform.json  transformwrapper.h
shiboken6/: LICENSE.txt  libicui18n.so.56  libicuuc.so.56  shiboken6
shiboken6/include/: pyside6_global.h  sbkversion.h
shiboken6/include/Qt3DAnimation/: pyside6_qt3danimation_python.h
shiboken6/include/Qt3DCore/: pyside6_qt3dcore_python.h
shiboken6/include/Qt3DExtras/: pyside6_qt3dextras_python.h
shiboken6/include/Qt3DInput/: pyside6_qt3dinput_python.h
shiboken6/include/Qt3DLogic/: pyside6_qt3dlogic_python.h
shiboken6/include/Qt3DRender/: pyside6_qt3drender_python.h
shiboken6/include/QtBluetooth/: pyside6_qtbluetooth_python.h
shiboken6/include/QtCharts/: pyside6_qtcharts_python.h
shiboken6/include/QtConcurrent/: pyside6_qtconcurrent_python.h
shiboken6/include/QtCore/: pyside6_qtcore_python.h
shiboken6/include/QtDBus/: pyside6_qtdbus_python.h
shiboken6/include/QtDataVisualization/: pyside6_qtdatavisualization_python.h
shiboken6/include/QtDesigner/: pyside6_qtdesigner_python.h
shiboken6/include/QtGui/: pyside6_qtgui_python.h
shiboken6/include/QtHelp/: pyside6_qthelp_python.h
shiboken6/include/QtMultimedia/: pyside6_qtmultimedia_python.h
shiboken6/include/QtMultimediaWidgets/: pyside6_qtmultimediawidgets_python.h
shiboken6/include/QtNetwork/: pyside6_qtnetwork_python.h
shiboken6/include/QtNetworkAuth/: pyside6_qtnetworkauth_python.h
shiboken6/include/QtOpenGL/: pyside6_qtopengl_python.h
shiboken6/typesystems/: typesystem_core_common.xml  typesystem_dbus.xml  typesystem_gui_common.xml  typesystem_multimedia.xml  typesystem_network.xml  typesystem_qml.xml  typesystem_quick.xml  typesystem_uitools.xml  typesystem_webenginecore.xml  typesystem_widgets_common.xml
ui/: CMakeLists.txt  LICENSE.txt  __init__.py  capacitordesigner.ui  celestialwindow.ui  jumpdrivewindow.ui  mainwindow.ui  spacecraftdesigner.ui  spacecraftwindow.ui  techwindow.ui
ui/icons/old/: README.txt
universe/: CMakeLists.txt  celestial.cpp  celestial.h  celestialtype.cpp  celestialtype.h  effects.h  empire.h  fixedv2d.h  materials.h  minerals.c  minerals.h  orbit.cpp  orbit.h  orbittype.cpp  orbittype.h  solarsystem.cpp  solarsystem.h  solarsystemtype.cpp  solarsystemtype.h  spacecraft.cpp  spacecraft.h  transform.cpp  transform.h  units.h  universe.cpp  universe.h  utilities.h
universe/components/: CMakeLists.txt  capacitor.h  circuit.cpp  circuit.h  component.cpp  component.h  jumpdrive.h
universe/mining/: deposit.cpp  deposit.h  machinery.cpp  machinery.h  mine.cpp  mine.h  minerals.cpp  minerals.h
universe/spacecraft/: fleettype.h  spacecraft.cpp  spacecraft.h  taskgroup.h
widgets/: DisplayWarp.cs  StartStop.cs
wrappers/: CMakeLists.txt  documentation.txt  paxpython.cpp  pysystemrenderer.cpp  pysystemrenderer.h  pysystemrenderermousebackend.cpp  pywrappers.h  qlistwrapper.cpp  wrappergen.py
wrappers/autowrappers/: capacitor.json  capacitordesign.json  capacitordesignwrapper.cpp  capacitorwrapper.cpp  capacitorwrapper.h  celestial.json  celestial_mineralogy.json  celestial_mineralogywrapper.cpp  celestial_mineralogywrapper.h  celestialwrapper.cpp  celestialwrapper.h  circuit.json  circuitdesign.json  circuitdesignwrapper.cpp  circuitdesignwrapper.h  circuitwrapper.cpp  circuitwrapper.h  component.json  componentdesign.json  componentdesignwrapper.cpp  componentdesignwrapper.h  componentwrapper.cpp  componentwrapper.h  conductor.json  conductorwrapper.cpp  conductorwrapper.h  directedweapon.json  directedweapondesign.json  directedweapondesignwrapper.cpp  directedweapondesignwrapper.h  directedweaponwrapper.cpp  directedweaponwrapper.h  engine.json  enginedesign.json  enginedesignwrapper.cpp  enginedesignwrapper.h  enginewrapper.cpp  enginewrapper.h  fixedv2d.json  fixedv2dwrapper.cpp  (+31 more)
wrappers/libwrappergen/: load.py  parse.py
(+25 files in other folders)
